--- a/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
+++ b/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <script src="~/wxstatic/js/mui.min.js"></script>
     <script src="~/wxstatic/js/mui.loading.js"></script>
     <script src="~/wxstatic/js/mui.picker.all.js"></script>
+    <script src="~/wxstatic/js/getPatamters.js"></script>
     @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
