--- a/HouseManage/HouseManage/Views/DailyCheck/CreateCheckResult.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/CreateCheckResult.cshtml
@@ -182,7 +182,8 @@
                     window.alert("检查结果不能为空！");
                 }
                 else if (!qualified && radiovalue == 1) {
-                    window.alert("检查详情中有不合格的项，总体检查结果不能为合格！请确认!");
+                    //window.alert("检查详情中有不合格的项，总体检查结果不能为合格！请确认!");
+                    mui.alert("检查详情中有不合格的项，总体检查结果不能为合格！请确认!","警告","确定")
                 }
                 else {
                     let RWBH = window.location.search.split("?")[1];
