--- a/HouseManage/HouseManage/Views/DailyCheck/DailyCheckDetail.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/DailyCheckDetail.cshtml
@@ -14,13 +14,13 @@
                         <label style="padding-top:10px;padding-left:5px;">任务编号</label>
                     </div>
                     <div class="mui-col-sm-3 mui-col-xs-3">
-                        <label style="padding-top:10px;padding-left:5px;" id="RWBH"></label>
+                        <label style="padding-top:10px;padding-left:5px" id="RWBH"></label>
                     </div>
-                    <div class="mui-col-sm-3 mui-col-xs-3" style="text-align:center;padding-top:5px;padding-left:5px;">
+                    @*<div class="mui-col-sm-3 mui-col-xs-3" style="text-align:center;padding-top:5px;padding-left:5px;">
                         <button type="button" class="mui-btn mui-btn-success">提交</button>
-                    </div>
-                    <div class="mui-col-sm-3 mui-col-xs-3" style="text-align:center;padding-top:5px;padding-left:5px;">
-                        <button type="button" class="mui-btn mui-btn-primary" onclick="CreateCheckResult()">新增</button>
+                    </div>*@
+                    <div class="mui-col-sm-6 mui-col-xs-6" style="text-align:center;padding-top:5px;padding-left:5px;">
+                        <button type="button" class="mui-btn mui-btn-primary"style="float:right;margin-right:15px;" onclick="CreateCheckResult()">新增</button>
                     </div>
                 </div>
             </div>
