--- a/HouseManage/HouseManage/Views/DailyCheck/PartDailyCheckDetail.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/PartDailyCheckDetail.cshtml
@@ -62,17 +62,21 @@
         <!--页脚，放置补充信息或支持的操作-->
         <div class="mui-card-footer" style="text-align:center;">
             @{
-                if (item.JCJG == 0 || item.JCJG == 1)
+                if (item.JCJG == 0)
                 {
                     <button type="button" class="mui-btn mui-btn-royal" style="text-align:center;" onclick="GetCheckResultDetail('@item.RESULT_ID')">修改</button>
                 }
+                else if (item.JCJG == 1)
+                {
+                    <button type="button" class="mmui-btn mui-btn-danger" style="text-align:center;">合格</button>
+                }
                 else if (item.JCJG == 2)
                 {
-                    <button type="button" class="mui-btn mui-btn-royal" style="text-align:center;">复查合格</button>
+                    <button type="button" class="mui-btn mui-btn-success" style="text-align:center;">复查合格</button>
                 }
                 else
                 {
-                    <button type="button" class="mui-btn mui-btn-royal" style="text-align:center;">复查不合格</button>
+                    <button type="button" class="mmui-btn mui-btn-danger" style="text-align:center;">复查不合格</button>
                 }
             }
 
