--- a/HouseManage/HouseManage/Views/ReCheckReview/Index.cshtml
+++ b/HouseManage/HouseManage/Views/ReCheckReview/Index.cshtml
@@ -51,10 +51,32 @@
             var rwmc = this.firstChild.getAttribute("rwmc");
             var fwbh = this.firstChild.getAttribute("fwbh");
             var fwmc = this.firstChild.getAttribute("fwmc");
-            window.location.href = "ReviewCheckDetail?resultId=" + resultId + "&rwbh=" + rwbh + "&fwbh=" + fwbh + "&fwmc=" + fwmc + "&rwmc=" + rwmc;
+            var jcr_openid = this.firstChild.getAttribute("jcr_openid");
+            post("ReviewCheckDetail", {
+                "resultId": resultId, "rwbh": rwbh, "rwmc": rwmc, "fwbh": fwbh, "fwmc": fwmc, "jcr_openid":jcr_openid });
+            //window.location.href = "ReviewCheckDetail?jcr_openid=" + jcr_openid + "&resultId=" + resultId + "&fwmc="
+               // + fwmc + "&rwmc=" + rwmc + "&rwbh=" + rwbh + "&fwbh=" + fwbh ;
         });
     })(mui);
-
+    function post(url, params) {
+        // 创建form元素
+        var temp_form = document.createElement("form");
+        // 设置form属性
+        temp_form.action = url;
+        temp_form.target = "_self";
+        temp_form.method = "post";
+        temp_form.style.display = "none";
+        // 处理需要传递的参数 
+        for (var x in params) {
+            var opt = document.createElement("textarea");
+            opt.name = x;
+            opt.value = params[x];
+            temp_form.appendChild(opt);
+        }
+        document.body.appendChild(temp_form);
+        // 提交表单      
+        temp_form.submit();
+    } 
     function getData() {
         $.get('GetRecheckReviewData', {}, function (data) {
             if (data && data.list&&data.list.length>0) {
