修改自助缴费电费处理

--- a/HouseManage/HouseManage/Views/MyShop/Payment.cshtml
+++ b/HouseManage/HouseManage/Views/MyShop/Payment.cshtml
@@ -314,7 +314,7 @@
                 Html += `                </div>
                                                             </div>
                                                 </li>`;
-                Html = Html.format({ JFJE: toFixed(data.JFJE), JFLX: getType(data.JFLX), YXQS: getDay(data.YXQS), DATE: (data.JFLX == 0 ? getDate(data.YXQZ) : getDate(data.YXQS)), RECORD_ID: data.RECORD_ID, CZ_SHID: data.CZ_SHID, FWID: data.FWID });
+                Html = Html.format({ JFJE: toFixed(data.JFJE), JFLX: getType(data.JFLX), YXQS: getDay(data.YXQS), DATE: (data.JFLX == 0 ? getDate(data.YXQS) : getDate(data.YXQZ)), RECORD_ID: data.RECORD_ID, CZ_SHID: data.CZ_SHID, FWID: data.FWID });
                 return Html;
             }
             var toFixed = function (num) {
@@ -337,7 +337,7 @@
                                                                 {STATE}
                                                             </div>
                                                         </li>`;
-                html = html.format({ FWID: data.FWID, CZ_SHID: data.CZ_SHID, RECORD_ID: data.RECORD_ID, JFJE: toFixed(data.JFJE), JFLX: getType(data.JFLX), CREATE_TIME: new Date(data.CREATE_TIME).formatDate("yyyy-MM-dd hh:mm:ss"), STATE: "缴费成功" });
+                html = html.format({ FWID: data.FWID, CZ_SHID: data.CZ_SHID, RECORD_ID: data.RECORD_ID, JFJE: toFixed(data.JFJE), JFLX: getType(data.JFLX), CREATE_TIME: new Date(data.JFRQ).formatDate("yyyy-MM-dd hh:mm:ss"), STATE: "缴费成功" });
                 return html;
             }
             var getPayReminder = function (setVal, callback) {
