--- a/HouseManage/HouseManage/Views/Orders/SelfPay.cshtml
+++ b/HouseManage/HouseManage/Views/Orders/SelfPay.cshtml
@@ -25,15 +25,15 @@
             </div>
             <div class="mui-input-row num" id="water">
                 <label>水 量(立方)</label>
-                <div class="mui-numbox" id="wnumber" data-numbox-step='5' data-numbox-min='0' data-numbox-max='10000' style="width:170px">
+                <div class="mui-numbox" id="wnumber" data-numbox-step='1' data-numbox-min='0' data-numbox-max='10000' style="width:170px">
                     <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
                     <input class="mui-numbox-input" type="number" />
                     <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
                 </div>
             </div>
             <div class="mui-input-row num" id="elec">
-                <label>电 费(元)</label>
-                <div class="mui-numbox" id="wnumber" data-numbox-step='10' data-numbox-min='0' data-numbox-max='10000' style="width:170px">
+                <label>电 费(度)</label>
+                <div class="mui-numbox" id="wnumber" data-numbox-step='1' data-numbox-min='0' data-numbox-max='10000' style="width:170px">
                     <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
                     <input class="mui-numbox-input" type="number" />
                     <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
@@ -84,6 +84,7 @@
                 this.getTypes();
                 this.getBeneficiaries();
                 this.getUnitPriceOfWater();
+                this.getUnitPriceOfElec();
                 this.checkRecord();// 检查是否有提醒的订单，
             },
             Bind: function () {
@@ -125,7 +126,7 @@
                 });
                 jq("div.num input").on('change', function () {
                     var reg = /^[0-9,.]*$/ //^[-\+]?\d+(\.\d+)?$/
-                    var money = parseFloat(this.value);
+                    var money = parseInt(this.value);
                     if (!reg.test(money)) {
                         mui.alert("格式错误，请重新输入", "提示");
                         this.value = "";
@@ -135,7 +136,8 @@
                         var mo = (money * (self.waterUnitPrice * 10000)) / 10000
                         jq("#total_money").val("￥" + mo);
                     } else {
-                        jq("#total_money").val("￥" + money);
+                        var mo = (money * (self.elecUnitPrice * 10000)) / 10000
+                        jq("#total_money").val("￥" + mo);
                     }
                     self.model.WNum = money;
                     self.model.EPrice = money;
@@ -203,6 +205,14 @@
                 this.post("GetUnitPriceOfWater", null, function (data) {
                     if (data.code == 1000) {
                         self.waterUnitPrice = data.data || 0;
+                    }
+                })
+            },
+            getUnitPriceOfElec: function () {
+                var self = this;
+                this.post("GetUnitPriceOfElectricSET", null, function (data) {
+                    if (data.code == 1000) {
+                        self.elecUnitPrice = data.data || 0;
                     }
                 })
             },
