--- a/HouseManage/HouseManage/Views/Home/Error.cshtml
+++ b/HouseManage/HouseManage/Views/Home/Error.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "资源不存在";
+    ViewData["Title"] = ViewBag.Title;
 }
 
     <div class="mui-content">
         <div class="mui-row">
             <div class="mui-col-sm-12 mui-col-xs-12">
                 <div class="text-center" style="padding:30px 0">
-                    <h3 style="color:orange">资源不存在</h3>
+                    <h3 style="color:orange">@ViewBag.Title</h3>
                 </div>
             </div>
             <div class="mui-col-sm-12 mui-col-xs-12">
